Reworked controllers, auth and more
